Add a /v2beta/nearest handler using the V2 Locator (#75)
* Add a /v2beta handler using the V2 Locator

* Fix params

* Add parameter to openapi config

* Add locatetest tests

* Add more handler tests

* Update docstrings

* Fix typo

* Use circumference

* Remove meaningless test

* Review comments
